@@ -132,6 +132,7 @@ val ktlintCheck by tasks.registering(JavaExec::class) {
         "**.kts",
         "!**/build/**",
     )
+    isIgnoreExitValue = true
 }
 
 tasks.check {
@@ -143,6 +144,7 @@ tasks.register<JavaExec>("ktlintFormat") {
     description = "Check Kotlin code style and format"
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
     // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
     args(
         "-F",
@@ -150,4 +152,5 @@ tasks.register<JavaExec>("ktlintFormat") {
         "**.kts",
         "!**/build/**",
     )
+    isIgnoreExitValue = true
 }
